--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-sans: var(--font-inter), sans-serif;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans);
+}
+.filter-blue {
+  filter: invert(31%) sepia(95%) saturate(747%) hue-rotate(185deg) brightness(95%) contrast(85%);
 }
